--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>
 
   <div class="viewmore">
-  <a class="button" href="#">View more...</a>
+  <a class="button" href="studentpage.html">View more...</a>
   </div>
 
     <section>
