--- a/studentpage.html
+++ b/studentpage.html
@@ -25,7 +25,7 @@
                     <img class="socialmedia"src="facebook.png" alt="icon">
                 </div>
                 <div class="navlinks">
-                    <h6 class="links"><a href="#">LOGIN  /</a></h6>
+                    <h6 class="links"><a href="index.html">LOGIN  /</a></h6>
                     <h6 class="links"><a href="#">  REGISTER</a></h6>
                 </div>
             </div>
